--- a/dev/tutorials/global_identifiability/index.html
+++ b/dev/tutorials/global_identifiability/index.html
@@ -29,7 +29,7 @@ z&#39;(t) = c*w(t)*q*y(t) - h*z(t)
 y&#39;(t) = x(t)*v(t)*beta - a*y(t)
 y2(t) = z(t)
 y1(t) = w(t)</code><br/><code class="language-julia-repl hljs" style="display:block;">julia&gt; global_id = assess_identifiability(ode, 0.99)</code><code class="nohighlight hljs ansi" style="display:block;">[ Info: Assessing local identifiability
-[ Info: Local identifiability assessed in 5.745578277 seconds
+[ Info: Local identifiability assessed in 6.355872623 seconds
 [ Info: Assessing global identifiability
 [ Info: Note: the input model has nontrivial submodels. If the computation for the full model will be too heavy, you may want to try to first analyze one of the submodels. They can be produced using function `find_submodels`
 [ Info: Computing IO-equations
@@ -39,8 +39,7 @@ y1(t) = w(t)</code><br/><code class="language-julia-repl hljs" style="display:bl
 [ Info: 1: selected lucky prime 2147483647
 [ Info: CRT modulo (1, 2147483647)
 [ Info: Reconstructing modulo 2147483647
-[ Info: Heuristic check passed!
-[ Info: Randomized check failed.
+[ Info: Heuristic check failed.
 [ Info: 2: selected lucky prime 2147483659
 [ Info: CRT modulo (2147483647, 2147483659)
 [ Info: Reconstructing modulo 4611686039902224373
@@ -48,6 +47,7 @@ y1(t) = w(t)</code><br/><code class="language-julia-repl hljs" style="display:bl
 [ Info: 3: selected lucky prime 2147483693
 [ Info: CRT modulo (4611686039902224373, 2147483693)
 [ Info: Reconstructing modulo 9903520567925774155444649489
+[ Info: Heuristic check failed.
 [ Info: 4: selected lucky prime 2147483713
 [ Info: CRT modulo (9903520567925774155444649489, 2147483713)
 [ Info: Reconstructing modulo 21267649120981110191733715050621272657
@@ -75,17 +75,17 @@ y1(t) = w(t)</code><br/><code class="language-julia-repl hljs" style="display:bl
 [ Info: Using fglm: false
 [ Info: Computing in Groebner.Lex() order, result is in Groebner.Lex() order
 [ Info: Using fglm: false
-┌ Info: Computed in 15.940059259 seconds
+┌ Info: Computed in 16.875181135 seconds
 │   :ioeq_time = :ioeq_time
-└   ioeq_time = 15.940059259
+└   ioeq_time = 16.875181135
 [ Info: Computing Wronskians
-┌ Info: Computed in 2.955942997 seconds
+┌ Info: Computed in 3.772200517 seconds
 │   :wrnsk_time = :wrnsk_time
-└   wrnsk_time = 2.955942997
+└   wrnsk_time = 3.772200517
 [ Info: Dimensions of the Wronskians [40, 18]
-┌ Info: Ranks of the Wronskians computed in 0.022804717 seconds
+┌ Info: Ranks of the Wronskians computed in 0.021243161 seconds
 │   :rank_time = :rank_time
-└   rank_times = 0.022804717
+└   rank_times = 0.021243161
 [ Info: Assessing global identifiability using the coefficients of the io-equations
 [ Info: Computing in Groebner.DegRevLex() order, result is in Groebner.DegRevLex() order
 [ Info: Using fglm: false
@@ -149,10 +149,10 @@ y1(t) = w(t)</code><br/><code class="language-julia-repl hljs" style="display:bl
 [ Info: Using fglm: false
 [ Info: Computing in Groebner.DegRevLex() order, result is in Groebner.DegRevLex() order
 [ Info: Using fglm: false
-┌ Info: Computed in 6.544528018 seconds
+┌ Info: Computed in 6.156491898 seconds
 │   :check_time = :check_time
-└   check_time = 6.544528018
-[ Info: Global identifiability assessed in 26.361570771 seconds
+└   check_time = 6.156491898
+[ Info: Global identifiability assessed in 27.677482626 seconds
 Dict{Any, Symbol} with 10 entries:
   d    =&gt; :globally
   lm   =&gt; :nonidentifiable
@@ -163,4 +163,4 @@ Dict{Any, Symbol} with 10 entries:
   h    =&gt; :globally
   beta =&gt; :nonidentifiable
   b    =&gt; :globally
-  u    =&gt; :globally</code></pre><p>We also note that it&#39;s usually inexpensive to obtain the result with higher probability of correctness. For example, taking <code>p=0.9999</code> in the system above will result only in a slight slowdown.</p><h2 id="Note-on-the-probability-of-correctness"><a class="docs-heading-anchor" href="#Note-on-the-probability-of-correctness">Note on the probability of correctness</a><a id="Note-on-the-probability-of-correctness-1"></a><a class="docs-heading-anchor-permalink" href="#Note-on-the-probability-of-correctness" title="Permalink"></a></h2><p>Currently, the probability of correctness does not include the probability of correctness of the modular reconstruction for Groebner bases. This probability is ensured by an additional check modulo a large prime, and can be neglected for practical purposes. However, in the future versions, we plan to eliminate this possible error.</p><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>D. Wodarz, M. Nowak, <a href="https://doi.org/10.1073/pnas.96.25.14464"><em>Specific therapy regimes could lead to long-term immunological control of HIV</em></a>, PNAS December 7, 1999 96 (25) 14464-14469;</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../local_identifiability/">« Local Identifiability of Differential Models</a><a class="docs-footer-nextpage" href="../using_modeling_toolkit/">Using ModelingToolkit.jl With StructuralIdentifiability.jl »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.24 on <span class="colophon-date" title="Thursday 20 April 2023 06:36">Thursday 20 April 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  u    =&gt; :globally</code></pre><p>We also note that it&#39;s usually inexpensive to obtain the result with higher probability of correctness. For example, taking <code>p=0.9999</code> in the system above will result only in a slight slowdown.</p><h2 id="Note-on-the-probability-of-correctness"><a class="docs-heading-anchor" href="#Note-on-the-probability-of-correctness">Note on the probability of correctness</a><a id="Note-on-the-probability-of-correctness-1"></a><a class="docs-heading-anchor-permalink" href="#Note-on-the-probability-of-correctness" title="Permalink"></a></h2><p>Currently, the probability of correctness does not include the probability of correctness of the modular reconstruction for Groebner bases. This probability is ensured by an additional check modulo a large prime, and can be neglected for practical purposes. However, in the future versions, we plan to eliminate this possible error.</p><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>D. Wodarz, M. Nowak, <a href="https://doi.org/10.1073/pnas.96.25.14464"><em>Specific therapy regimes could lead to long-term immunological control of HIV</em></a>, PNAS December 7, 1999 96 (25) 14464-14469;</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../local_identifiability/">« Local Identifiability of Differential Models</a><a class="docs-footer-nextpage" href="../using_modeling_toolkit/">Using ModelingToolkit.jl With StructuralIdentifiability.jl »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.24 on <span class="colophon-date" title="Wednesday 3 May 2023 18:18">Wednesday 3 May 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
